--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,4 +1,4 @@
-
+spring.application.name=Hight Style Wear
 #Database config
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/local_db
@@ -12,7 +12,7 @@ spring.jpa.hibernate.ddl-auto=update
 
 #Security Config
 spring.security.user.name=admin
-#password = admin
+#password
 spring.security.user.password=$2a$10$IRAa2L42Bz011.za0K6QrevQX2cGHIsbfouKkGdP9OU6S6klTsJn6
 spring.security.user.roles=ADMIN
 
@@ -20,12 +20,16 @@ spring.security.user.roles=ADMIN
 spring.mail.host=smtp.yandex.ru
 #465 993 995 587
 spring.mail.port=587
-spring.mail.username=djekadjonsov@yandex.ru
+spring.mail.username=youremail@yandex.ru
 spring.mail.password=ungrppkmduhhajut
-#spring.mail.password=cRcYXyTim1TC4cEeTxLU
-#spring.mail.password=
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.connectiontimeout=5000
 spring.mail.properties.mail.smtp.timeout=5000
 spring.mail.properties.mail.smtp.writetimeout=5000
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+#ACTUATOR
+management.endpoints.web.exposure.include=*
+
+#SPRING BOOT ADMIN CLIENT
+spring.boot.admin.client.url=http://localhost:9090
